# ChangeLog for app-office/libreoffice
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.235 2012/02/15 21:26:00 scarabeus Exp $

  15 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Not m-n package

  14 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.3.2-r1.ebuild, libreoffice-3.4.5.2.ebuild,
  libreoffice-3.5.0.3.ebuild, libreoffice-3.5.9999.ebuild,
  libreoffice-9999-r2.ebuild:
  Depend on cairo[X]. Wrt bug #401807.

  14 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.5.0.3.ebuild, libreoffice-3.5.9999.ebuild,
  libreoffice-9999-r2.ebuild:
  Proper switch name for postgres.

*libreoffice-3.5.0.3 (14 Feb 2012)

  14 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -libreoffice-3.5.0.1.ebuild, +libreoffice-3.5.0.3.ebuild:
  Bump to release version.

  03 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Assign to maintainer-needed

*libreoffice-3.5.0.1 (18 Jan 2012)

  18 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -libreoffice-3.4.99.3.ebuild, +libreoffice-3.5.0.1.ebuild:
  Version bump to 3.5.0 rc1

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libreoffice-3.4.5.2.ebuild:
  Stable for amd64, wrt bug #398521

  13 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.5.9999.ebuild, libreoffice-9999-r2.ebuild:
  Enable mergelibs.

  11 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.5.2.ebuild:
  Drop errornous templates useflag handling.

  11 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/generate_libreoffice_package.sh:
  Add the binary generator script.

*libreoffice-3.4.99.3 (11 Jan 2012)

  11 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -libreoffice-3.4.99.2.ebuild, +libreoffice-3.4.99.3.ebuild:
  Bump to beta3.

  08 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +files/libreoffice-kde48.patch, libreoffice-3.4.5.2.ebuild,