@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/libreoffice-3.5.9999.ebuild,v 1.9 2012/02/14 19:29:27 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/libreoffice-3.5.9999.ebuild,v 1.10 2012/02/16 08:48:32 scarabeus Exp $
 
 EAPI=4
 
@@ -410,7 +410,7 @@ src_configure() {
 		--with-external-tar="${DISTDIR}" \
 		--with-lang="" \
 		--with-max-jobs=${jbs} \
-		--with-num-cpus=${jbs} \
+		--with-num-cpus=2 \
 		--with-theme="${themes}" \
 		--with-unix-wrapper=libreoffice \
 		--with-vendor="Gentoo Foundation" \
